# nomad-eln-external-integrations

./: .cruft.json  404.html  README.md  index.html  move_template_files.sh  pyproject.toml  pyproject.toml.rej
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
nomad-eln-external-integrations/: MANIFEST.in  README.md  mkdocs.yml  move_template_files.sh
nomad-eln-external-integrations/docs/: index.md
nomad-eln-external-integrations/src/nomad_eln_external_integrations/schema_packages/: schema_package.py
reference/: references.html
search/: search_index.json
src/nomad_eln_external_integrations/normalizers/: __init__.py  normalizer.py
src/nomad_eln_external_integrations/parsers/: __init__.py  parser.py
src/nomad_eln_external_integrations/parsers/chemotion/: parser.py
src/nomad_eln_external_integrations/parsers/elabftw/: __init__.py  __main__.py  parser.py
src/nomad_eln_external_integrations/schema_packages/: __init__.py  __init__.py.rej
src/nomad_eln_external_integrations/schema_packages/elabftw/: __init__.py  schema.py
src/nomad_eln_external_integrations/schema_packages/labfolder/: __init__.py  schema.py
src/nomad_eln_external_integrations/schema_packages/openbis/: __init__.py  schema.py
tests/: conftest.py
tests/apps/: test_app.py
tests/data/: test.archive.yaml
tests/data/parsers/chemotion/test/: description.txt  export.json
tests/data/parsers/chemotion/test/attachments/: ddd7713f-c3a2-4acf-aac6-f1eef4403408
tests/data/parsers/elabftw/: with_file.eln
tests/data/parsers/elabftw/legacy/: ro-crate-metadata.json
tests/data/parsers/elabftw/legacy/2023-01-13 - Test - 86506194/: export-elabftw.json  test_molecule_json.chemjson
tests/data/parsers/elabftw/with_file/2024-09-19-151520-export/: ro-crate-metadata.json
tests/data/schemas/labfolder/: example-labfolder.archive.json
tests/parsers/: test_parser.py  test_parser.py.rej
tests/parsers/chemotion/: test_chemotion.py
tests/parsers/elabftw/: test_elabftw_parser.py
tests/schema_packages/: test_schema_package.py
tests/schema_packages/labfolder/: test_labfolder.py
tests/schema_packages/openbis/: test_openbis.py
tutorial/: tutorial.html
